<resources>
    <string name="app_name">SocialDog</string>
    <string name="title_activity_paths_history_maps">PathsMaps</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Accueil</string>
    <string name="menu_walks">Promenades</string>
    <string name="menu_friendslist">Amis</string>
    <string name="menu_dogs">Chiens</string>
</resources>
