<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/trajet"
            android:title="@string/menu_walks" />
        <item
            android:id="@+id/nav_friendslist"
            android:icon="@drawable/ic_friends_black_24dp"
            android:title="@string/menu_friendslist" />
        <item
            android:id="@+id/nav_dogs"
            android:icon="@drawable/chien"
            android:title="@string/menu_dogs" />
    </group>

</menu>
